Update README to reflect changes in bootrom-tools
bootrom-tools repository has been restructured. We need to change
the path to point to the right place. Update the README file for
the bootrom build setup

Testing Done: Followed the README and builds correctly
Bug Number:
Review URL:   https://reviews.leaflabs.com/r/1039/
Reviewed by:  Morgan Girling <girling_morgan@projectara.com>,
              Marti Bolivar <mbolivar@leaflabs.com>

Signed-off-by: Jun Li <li_jun@projectara.com>

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ to setup the build environment.
 
 In addition, the boot ROM build relies on
     http://github.com/projectara/bootrom-tools.
-Please clone this repository and make sure the "scripts" folder in this tree
+Please clone this repository and make sure the folder of the bootrom-tools tree
 is included in the PATH.
 
 To build the code, do:
