es2: fix ara vendor/product id during compilation
Module developers need separate vendor/product_id for separate modules,
but the es2 hardware doesn't support that. These numbers are significant
as boot-over-unipro needs this to match firmware blob from module store.

Add support to pass them to the configure script, just for es2. The new
format is:

./configure es2tsb <vendor_id> <product_id>

Testing Done: Tested boot over unipro on DB3 with real module
Bug Number: Trivial
Review URL: https://reviews.leaflabs.com/r/2105/
Reviewed by: Eli Sennesh

Signed-off-by: Viresh Kumar <viresh.kumar@linaro.org>

--- a/README
+++ b/README
@@ -56,3 +56,15 @@ Memory map (workram):
      ------------------------------------
     | 0x10000000 | workram start         |
      ------------------------------------
+
+
+ES2 vendor/product ids:
+We can't read ES2 vendor/product id specific DME attributes. In order to
+differentiate module vendors on the same ARA system, we pass user-defined set of
+vendor product ids to the AP over firmware protocol. These ids are passed as
+arguments to the ./configure command.
+
+./configure es2tsb <vendor-id> <product-id>
+
+After which you can follow general compilation steps. This will affect only ES2
+and the greybus core sends firmware request to get vid/pid, only for ES2 chips.
